--- a/mPushDemo/src/main/res/layout/push_layout.xml
+++ b/mPushDemo/src/main/res/layout/push_layout.xml
@@ -24,6 +24,7 @@
                       android:singleLine="true"
                       android:textColor="#ffffff"
                       android:layout_weight="1"
+                      style="@android:style/TextAppearance.Medium"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"/>
             <TextView android:id="@+id/push_title_time"
@@ -32,6 +33,7 @@
                       android:textSize="16sp"
                       android:singleLine="true"
                       android:layout_width="wrap_content"
+                      style="@android:style/TextAppearance.Medium"
                       android:layout_height="wrap_content"/>
         </LinearLayout>
         <TextView android:id="@+id/push_text"
@@ -39,6 +41,7 @@
                   android:textSize="16sp"
                   android:singleLine="true"
                   android:layout_width="wrap_content"
+                  style="@android:style/TextAppearance.Small"
                   android:layout_height="wrap_content"/>
     </LinearLayout>
 
